<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/survey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyFragment">

    <TextView
        android:id="@+id/yes_Count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:text="@string/counter_Yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/yes_Button"
        app:layout_constraintStart_toStartOf="@+id/yes_Button"
        app:layout_constraintTop_toBottomOf="@+id/yes_Button" />

    <TextView
        android:id="@+id/question_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_Text"
        app:layout_constraintBottom_toTopOf="@+id/resultsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yes_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_Button"
        app:layout_constraintBottom_toTopOf="@+id/yes_Count"
        app:layout_constraintEnd_toStartOf="@+id/no_Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/no_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_Button"
        app:layout_constraintBottom_toTopOf="@+id/no_Count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yes_Button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/resultsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_Text" />

    <TextView
        android:id="@+id/no_Count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:text="@string/counter_No"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/no_Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yes_Count"
        app:layout_constraintStart_toStartOf="@+id/no_Button"
        app:layout_constraintTop_toBottomOf="@+id/no_Button" />

</androidx.constraintlayout.widget.ConstraintLayout>




















