<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".ResultsFragment">

    <TextView
        android:id="@+id/yes_Count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:textColor="#ff6750a4"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/no_Count"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_Count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:textColor="#ff6750a4"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yes_Count"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yes_Answers_Text"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginTop="269dp"
        android:inputType="text"
        android:text="@string/yes_answers_Txt"
        android:textAlignment="center"
        android:textColor="#ff6750a4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/no_Answers_Text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_Answers_Text"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginTop="269dp"
        android:inputType="text"
        android:text="@string/no_Answers_Txt"
        android:textAlignment="center"
        android:textColor="#ff6750a4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yes_Answers_Text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/results_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:ems="12"
        android:inputType="text"
        android:minHeight="48dp"
        android:outlineAmbientShadowColor="#ff6750a4"
        android:text="@string/results_Txt"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#ff6750a4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="403dp"
        android:layout_marginEnd="129dp"
        android:text="Continue Survey"
        app:layout_constraintBottom_toTopOf="@+id/resetValuesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/resetValuesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="161dp"
        android:text="Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_Button" />
</androidx.constraintlayout.widget.ConstraintLayout>






















